crates/bcp-tests/tests/snapshots/conformance__all_block_types_minimal.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
--- main.go [go] ---
package main

[system] You are a helpful assistant.

--- tree: / ---
main.go (12 bytes)


--- ls [ok] ---
main.go

--- README ---
# BCP

--- data [json] ---
{"version":1}

--- diff: main.go ---
-package old
+package main


[embed-ref: text-embedding-3-small]

--- ext: com.example/custom ---
hello
