crates/bcp-tests/tests/snapshots/conformance__compressed_blocks_minimal.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
--- src/big.rs [rust] ---
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
