crates/bcp-tests/tests/snapshots/conformance__compressed_blocks_xml.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
<context>
<code lang="rust" path="src/big.rs">
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}
fn placeholder() {}

</code>
</context>
