crates/bcp-tests/tests/snapshots/conformance__compressed_payload_markdown.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
## index.ts

```typescript
export const VERSION = '1.0.0';
```

**User**: What does this export?
