crates/bcp-tests/tests/snapshots/conformance__compressed_payload_minimal.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
--- index.ts [typescript] ---
export const VERSION = '1.0.0';

[user] What does this export?
