crates/bcp-tests/tests/snapshots/conformance__content_addressed_markdown.snap
---
source: crates/bcp-tests/tests/conformance.rs
expression: output
---
## src/a.rs

```rust
fn shared() -> u32 { 42 }
```

## src/b.rs

```rust
fn shared() -> u32 { 42 }
```
